--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <!-- Created by Kevin Hinojosa www.mrkevinhinojosa.com -->
 <!-- Messages, Bike race at Villa Alicante, HoH, Refinance with GV Home Loans, Covid Vaccine Info  -->
 <!-- http://go.pardot.com/l/857603/2021-04-13/tf258/857603/16183497922jPQLIsE/Placeholder.png Placeholder 1000x1000px -->
+<!-- http://go.pardot.com/l/857603/2021-04-19/tvsh6/857603/1618867870Z9ZLREbV/Vaccine_email_header.jpg -->
+
+<!-- https://kevi123.github.io/home-owner-email-04-22-2021/ -->
+
 
 
 
@@ -484,7 +488,8 @@
 								</tr>
 								<!--Header End-->
 								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-									<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 0px; text-align: center; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 1.8em; font-weight: 600; color: #ffffff;" valign="top" class=""><a href="https://www.co.fresno.ca.us/departments/public-health/covid-19/covid-19-vaccine-information?locale=en" target="_blank"><img alt="Granville Homes is happy to schedule your COVID-19 vaccine appointment " class="fluid-centered" height="300" src="http://go.pardot.com/l/857603/2021-04-13/tf258/857603/16183497922jPQLIsE/Placeholder.png" style="width: 600px; height: 300px;" width="600"> </a></td>
+									<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 0px; text-align: center; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 1.8em; font-weight: 600; color: #ffffff;" valign="top" class=""><a href="https://www.co.fresno.ca.us/departments/public-health/covid-19/covid-19-vaccine-information?locale=en" target="_blank"><img alt="Granville Homes is happy to schedule your COVID-19 vaccine appointment " class="fluid-centered" height="300" src="http://go.pardot.com/l/857603/2021-04-19/tvsh6/857603/1618867870Z9ZLREbV/Vaccine_email_header.jpg
+										" style="width: 600px; height: 300px;" width="600"> </a></td>
 								</tr>
 							</tbody>
 						</table>
@@ -506,7 +511,7 @@
 									<table align="center " bgcolor="#285A9C " border="0 " cellpadding="0 " cellspacing="0 " height="60 " style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt!important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;table-layout:fixed !important;margin:0 auto !important;border-radius:4px; text-align:center;" width="240">
 										<tbody>
 											<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">
-												<td align="center " height="44 " pardot-data="link-color:#ffffff;" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;font-family:'Montserrat', Helvetica, Arial, 'sans-serif'; font-size:14px; text-align:center;" valign="middle " class=""><b style="font-family: Montserrat, Helvetica, Arial, sans-serif; display: inline-block; text-decoration: none; line-height: 25px; text-align: center; color: rgb(255, 255, 255) !important;"><a href="https://www.co.fresno.ca.us/departments/public-health/covid-19/covid-19-vaccine-information?locale=en" style="text-decoration: none; color: rgb(255, 255, 255);" target="_blank">Schedule Vaccine Appointment</a></b></td>
+												<td align="center " height="44 " pardot-data="link-color:#ffffff;" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;font-family:'Montserrat', Helvetica, Arial, 'sans-serif'; font-size:14px; text-align:center;" valign="middle " class=""><b style="font-family: Montserrat, Helvetica, Arial, sans-serif; display: inline-block; text-decoration: none; line-height: 25px; text-align: center; color: rgb(255, 255, 255) !important;"><a href="https://www.spoc-ortho.com/covid-19-vaccine" style="text-decoration: none; color: rgb(255, 255, 255);" target="_blank">Sierra Pacific Orthopedics</a></b></td>
 											</tr>
 										</tbody>
 									</table>
@@ -515,7 +520,48 @@
 							</tbody>
 						</table>
 						</center>
-						<!-- Button : END --><br>
+						<!-- Button : END -->
+						<br>
+						<!-- Button : BEGIN -->
+						<center>
+						<table align="center " border="0 " cellpadding="0 " cellspacing="0 " style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0!important;border-collapse:collapse !important;table-layout:fixed !important;margin:0 auto !important;margin: auto; ">
+							<tbody>
+								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">
+									<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 14px; line-height: 20px !important;"><!--button width is here-->
+									<table align="center " bgcolor="#285A9C " border="0 " cellpadding="0 " cellspacing="0 " height="60 " style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt!important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;table-layout:fixed !important;margin:0 auto !important;border-radius:4px; text-align:center;" width="240">
+										<tbody>
+											<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">
+												<td align="center " height="44 " pardot-data="link-color:#ffffff;" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;font-family:'Montserrat', Helvetica, Arial, 'sans-serif'; font-size:14px; text-align:center;" valign="middle " class=""><b style="font-family: Montserrat, Helvetica, Arial, sans-serif; display: inline-block; text-decoration: none; line-height: 25px; text-align: center; color: rgb(255, 255, 255) !important;"><a href="https://www.samc.com/coronavirus/covid-19-vaccine-appointments" style="text-decoration: none; color: rgb(255, 255, 255);" target="_blank">Saint Agnes Medical Center</a></b></td>
+											</tr>
+										</tbody>
+									</table>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						</center>
+						<!-- Button : END -->
+						<br>
+						<!-- Button : BEGIN -->
+						<center>
+							<table align="center " border="0 " cellpadding="0 " cellspacing="0 " style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0!important;border-collapse:collapse !important;table-layout:fixed !important;margin:0 auto !important;margin: auto; ">
+								<tbody>
+									<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">
+										<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 14px; line-height: 20px !important;"><!--button width is here-->
+										<table align="center " bgcolor="#285A9C " border="0 " cellpadding="0 " cellspacing="0 " height="60 " style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt!important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;table-layout:fixed !important;margin:0 auto !important;border-radius:4px; text-align:center;" width="240">
+											<tbody>
+												<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%; ">
+													<td align="center " height="44 " pardot-data="link-color:#ffffff;" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;font-family:'Montserrat', Helvetica, Arial, 'sans-serif'; font-size:14px; text-align:center;" valign="middle " class=""><b style="font-family: Montserrat, Helvetica, Arial, sans-serif; display: inline-block; text-decoration: none; line-height: 25px; text-align: center; color: rgb(255, 255, 255) !important;"><a href="https://www.co.fresno.ca.us/departments/public-health/covid-19/covid-19-vaccine-information?locale=en" style="text-decoration: none; color: rgb(255, 255, 255);" target="_blank">Fresno County Public Health</a></b></td>
+												</tr>
+											</tbody>
+										</table>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+							</center>
+							<!-- Button : END -->
+										
 						&nbsp;</div>
 						</td>
 					</tr>
