Added GV Home Loan Image Hero

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <!-- Messages, Bike race at Villa Alicante, HoH, Refinance with GV Home Loans, Covid Vaccine Info  -->
 <!-- http://go.pardot.com/l/857603/2021-04-13/tf258/857603/16183497922jPQLIsE/Placeholder.png Placeholder 1000x1000px -->
 <!-- http://go.pardot.com/l/857603/2021-04-19/tvsh6/857603/1618867870Z9ZLREbV/Vaccine_email_header.jpg -->
+<!-- http://go.pardot.com/l/857603/2021-04-19/tvss8/857603/1618871701rBblzIvk/GVLoans_email_headerx650x400px.jpg -->
+<!-- http://go.pardot.com/l/857603/2021-04-19/tvsvg/857603/1618872743VzmYsWJ5/Email_header_GV_Home_loans_600x370px.png -->
+
 
 <!-- https://kevi123.github.io/home-owner-email-04-22-2021/ -->
 
@@ -338,7 +341,7 @@
 					</tr>
 					<!-- NAV MENU END -->
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-						<td class="full-width-image" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;"><a href="https://www.gvhomeloans.com/" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;text-decoration:none;color:#a4b4c4;" target="_blank"><img alt="Granville Home Loans Refinance Today" border="0" class="fluid-centered" height="450" src="http://go.pardot.com/l/857603/2021-04-13/tf258/857603/16183497922jPQLIsE/Placeholder.png Placeholder 1000x1000px" style="width: 600px; height: 450px; border-width: 0px; border-style: solid;" width="600"></a></td>
+						<td class="full-width-image" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;"><a href="https://www.gvhomeloans.com/" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;text-decoration:none;color:#a4b4c4;" target="_blank"><img alt="Granville Home Loans Refinance Today" border="0" class="fluid-centered" height="370" src="http://go.pardot.com/l/857603/2021-04-19/tvsvg/857603/1618872743VzmYsWJ5/Email_header_GV_Home_loans_600x370px.png" style="width: 600px; height: 370px; border-width: 0px; border-style: solid;" width="600"></a></td>
 					</tr>
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
