--- a/index.html
+++ b/index.html
@@ -345,10 +345,8 @@
 					</tr>
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
-						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>REFINANCE YOUR MORTGAGE TODAY</b> </span>
-						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loans was established to simplify the home buying process by providing value and convenience to our customers. We are intimately familiar with the home mortgage refinancing process, and we have established relationships with multiple wholesale providers to find you the best loan for your needs at the best rate.<br>
-                            <br>
-                            Our experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over forty years. Take advantage of near-historic-low interest rates and save thousands off the life of your loan by visiting Granville Home Loans today.
+						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>REFINANCE YOUR MORTGAGE TODAY AND SAVE</b> </span>
+						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loan's experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over forty years. Take advantage of near-historic-low interest rates, to reduce your payment or save thousands off the life of your loan by visiting Granville Home Loans today.
 						&nbsp;</p>
 						<!-- Button : BEGIN -->
 
@@ -383,7 +381,7 @@
 							<tbody>
 								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 									<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 20px;" valign="top" class="">
-									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;text-align: center; font-family: 'Montserrat', Helvetica, Arial,'sans-serif'; font-size: 24px; mso-height-rule: exactly; line-height: 30px; color: #ffffff;"><b>2021 Granville Home of Hope</b><br></p>
+									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;text-align: center; font-family: 'Montserrat', Helvetica, Arial,'sans-serif'; font-size: 24px; mso-height-rule: exactly; line-height: 30px; color: #ffffff;"><b>Granville Home of Hope Tickets On Sale</b><br></p>
 									</td>
 								</tr>
 							</tbody>
@@ -405,8 +403,9 @@
 					<!--Image hero end-->
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td pardot-data="" style="text-size-adjust: 100%; padding: 30px; text-align: left; font-size: 16px; line-height: 1.5em; color: rgb(255, 0, 0); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;" class="">
-						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:16px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b style="color:#50c8e8 ;">2021</b><b> Granville Home of Hope</b></span>
-						<p style="margin-top: 10px"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">2021 Granville Home of Hope Tickets are AVAILABLE NOW. Tickets are only $100 for your chance to win this stunning Canvas 9 Granville home located in Granville's latest Canvas on the Bluffs neighborhood at Copper River Ranch. Or grab a two-ticket Lexus Bundle for $200 with the chance to win a 24-month lease on a 2021 Lexus UX 200, presented by Fresno Lexus.<b> Only 2,250 bundles and 8,000 total tickets will be available.</b> 100% of proceeds will support 11 local nonprofits who will provide food, shelter, healthcare, and education to the underserved in our community. Tickets have sold out 4 years in a row, so make sure to get yours today.</span></p>
+						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:16px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;">THE LUCKY TICKET WILL WIN THIS BEAUTIFUL HOME</span>
+						<p style="margin-top: 10px"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">2021 Granville Home of Hope Tickets are AVAILABLE NOW. Tickets are only $100 for your chance to win this stunning Canvas 9 Granville home located in Granville's latest Canvas on the Bluffs neighborhood at Copper River Ranch. Or grab a two-ticket Lexus Bundle for $200 with the chance to win a 24-month lease on a 2021 Lexus UX 200, presented by Fresno Lexus.<b> Only 2,250 bundles and 8,000 total tickets will be available.</b><br>
+							<br> 100% of proceeds support 11 local nonprofits who provide food, shelter, healthcare, and education to the underserved in our community. Tickets have sold out 4 years in a row, so make sure to get yours today.</span></p>
 						<br>
 						<!-- Button : BEGIN -->
 						<center>
@@ -438,7 +437,7 @@
 							<tbody><!--Header start-->
 								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 									<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 20px;" valign="top" class="">
-									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;text-align: center; font-family: 'Montserrat', Helvetica, Arial,'sans-serif'; font-size: 24px; mso-height-rule: exactly; line-height: 30px; color: #ffffff;"><b>Circuit Race Coming to Ventana Hills</b></p>
+									<p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;text-align: center; font-family: 'Montserrat', Helvetica, Arial,'sans-serif'; font-size: 24px; mso-height-rule: exactly; line-height: 30px; color: #ffffff;"><b>Bike Race Coming to Ventana Hills</b></p>
 									</td>
 								</tr>
 								<!--Header End-->
@@ -502,7 +501,7 @@
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; text-align: left;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
 						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:16px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>The Health of your family is important to us</b> </span>
-						<p style="margin-top: 10px; margin-right: 0px; margin-left: 0px;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">As part of the Granville Family, the health of your family is extremely important to us. Below are a few links to schedule your COVID-19 vaccine appointment. Appointments are now available for all individuals over 16 years of age. If you or your family members need assistance with making an appointment, please feel free to reach out to us, and we would be happy to help you schedule an appointment. For vaccine assistance, please contact alannah.lones@gvhomes.com or (559) 492-4049 and ask for Alannah.</span></p>
+						<p style="margin-top: 10px; margin-right: 0px; margin-left: 0px;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">As part of the Granville Family, the health of you and your family is extremely important to us. Below are a few links to schedule your COVID-19 vaccine appointment. Appointments are now available for all individuals over 16 years of age. If you or your family members need assistance with making an appointment, please feel free to reach out to us, and we would be happy to help you schedule an appointment. For vaccine assistance, please contact alannah.lones@gvhomes.com or (559) 492-4049 and ask for Alannah.</span></p>
 
 
 						<!-- Button : BEGIN -->
