tatarion section in progress

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <!-- http://go.pardot.com/l/857603/2021-04-19/tvsh6/857603/1618867870Z9ZLREbV/Vaccine_email_header.jpg -->
 <!-- http://go.pardot.com/l/857603/2021-04-19/tvss8/857603/1618871701rBblzIvk/GVLoans_email_headerx650x400px.jpg -->
 <!-- http://go.pardot.com/l/857603/2021-04-19/tvsvg/857603/1618872743VzmYsWJ5/Email_header_GV_Home_loans_600x370px.png -->
+<!-- http://go.pardot.com/l/857603/2021-04-21/v1ht2/857603/1619044260ZwElEslB/Tatarian_EmailHeader_600x150.jpg -->
+<!-- http://go.pardot.com/l/857603/2021-04-21/v1hsz/857603/1619044260BhPzy9ng/Tatarian_EmailSideImage_300x300.jpg -->
+
 
 
 <!-- https://kevi123.github.io/home-owner-email-04-22-2021/ -->
@@ -374,7 +377,7 @@
 						</td>
 					</tr>
 
-										<!--New section Start, Vaccine -->
+					<!--New section Start, Vaccine -->
 					<!-- Header start-->
 					<tr bgcolor="#074975" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;">
@@ -520,6 +523,76 @@
 					</tr>
 					<!--Paragraph section end-->
 					<!-- Section End, Bike race -->
+
+
+					<!-- Section Start, Tatarion -->
+					<!-- Move-In Ready Homes Section, Start -->
+
+					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:0px; text-align: center;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff;">
+						<table cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;">
+							<tbody>
+								<hr>
+								<tr bgcolor="#fff" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+									<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;">
+									<table border="0" cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;" width="100%">
+										<tbody>
+											<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+												<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 4px; text-align: center; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 1.8em; font-weight: 600; color: #ffffff;" valign="top" class="">&nbsp;</td>
+											</tr>
+										</tbody>
+									</table>
+									</td>
+								</tr>
+								<!-- ROW ONE -->
+								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><!--House A left side-->
+									<td class="stack-column-center" width="50%" style="border-style:outset;" >
+									<table border="0" cellpadding="0" cellspacing="0">
+										<tbody>
+											<tr >
+												<td style="padding: 20px; text-align: center; " class=""><a href="" target="_blank"><img alt="H. Roger Tatarian" border="0" class="fluid" height="176" src="http://go.pardot.com/l/857603/2021-04-21/v1hsz/857603/1619044260BhPzy9ng/Tatarian_EmailSideImage_300x300.jpg" style="width: 250px; height: 250px; border-width: 0px; border-style: solid;" width="250"></a></td>
+											</tr>
+										</tbody>
+									</table>
+									</td>
+									<td class="stack-column-center" width="50%" style="border-style:outset"><!--House B right side-->
+									<table border="0" cellpadding="0" cellspacing="0">
+										<tbody>
+											<tr>
+												<!-- <td class="center-on-narrow" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 0 10px 10px; text-align: center;"> -->
+													
+													<p style="margin:10px 10px 0px 10px; text-align: left;"> H. Roger Tatarian<br><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is excited to support the naming of Fresno Unified's newest Alternative Education School after the late H. Roger Tatarian, a renowned journalist, professor, author, and Fresno native. Please follow the link below to fill out the survey in support of this titan of journalism and education in our Valley.</span></p>
+
+													</td>
+											</tr>
+										</tbody>
+									</table>
+									</td>
+								</tr>
+							</tbody>
+
+						</table>
+						</td>
+					</tr>
+					<!-- testing start-->
+					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding-left:30px; text-align: center;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff;">
+							<table cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;">
+								<tbody>
+									<tr>
+										<p style="margin:0px 10px 10px 0px; text-align: left;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Tatarian, an Armenian American, graduated from Fresno Unified, got his start in journalism at Fresno State, rose through the ranks at United Press International to become its top editor, and returned to his hometown to teach at Fresno State. Now the late Fresno native is being nominated by community members to be the namesake for Fresno Unified’s new alternative education campus at Ventura and 10th streets. Fitting because Tatarian grew up around the area of Ventura and 10th.</span></p>
+									</tr>
+								</tbody>
+							</table>
+						</td>
+					</tr>
+					<!-- testing end -->
+
+
+					<!-- Section End, Tatarian -->
+					
+
+
 
 					<!-- New Section Start, GV HoH -->
                     <!--Header start-->
