Tatarian section working

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 					<!-- Move-In Ready Homes Section, Start -->
 
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:0px; text-align: center;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff;">
+						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:0px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff; padding:30px 30px 0px 30px">
 						<table cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;">
 							<tbody>
 								<hr>
@@ -546,7 +546,7 @@
 								</tr>
 								<!-- ROW ONE -->
 								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><!--House A left side-->
-									<td class="stack-column-center" width="50%" style="border-style:outset;" >
+									<td class="stack-column-center" width="50%" " >
 									<table border="0" cellpadding="0" cellspacing="0">
 										<tbody>
 											<tr >
@@ -555,13 +555,13 @@
 										</tbody>
 									</table>
 									</td>
-									<td class="stack-column-center" width="50%" style="border-style:outset"><!--House B right side-->
+									<td class="stack-column-center" width="50%" ><!--House B right side-->
 									<table border="0" cellpadding="0" cellspacing="0">
 										<tbody>
 											<tr>
 												<!-- <td class="center-on-narrow" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 0 10px 10px; text-align: center;"> -->
 													
-													<p style="margin:10px 10px 0px 10px; text-align: left;"> H. Roger Tatarian<br><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is excited to support the naming of Fresno Unified's newest Alternative Education School after the late H. Roger Tatarian, a renowned journalist, professor, author, and Fresno native. Please follow the link below to fill out the survey in support of this titan of journalism and education in our Valley.</span></p>
+													<p style="margin:0px 0px 0px 0px; text-align: left;"> <b>H. Roger Tatarian</b><br><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is excited to support the naming of Fresno Unified's newest Alternative Education School after the late H. Roger Tatarian, a renowned journalist, professor, author, and Fresno native. Please follow the link below to fill out the survey in support of this titan of journalism and education in our Valley.</span></p>
 
 													</td>
 											</tr>
@@ -576,11 +576,11 @@
 					</tr>
 					<!-- testing start-->
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding-left:30px; text-align: center;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff;">
+						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding-left:30px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff; padding:0px 30px 30px 30px;">
 							<table cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;">
 								<tbody>
 									<tr>
-										<p style="margin:0px 10px 10px 0px; text-align: left;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Tatarian, an Armenian American, graduated from Fresno Unified, got his start in journalism at Fresno State, rose through the ranks at United Press International to become its top editor, and returned to his hometown to teach at Fresno State. Now the late Fresno native is being nominated by community members to be the namesake for Fresno Unified’s new alternative education campus at Ventura and 10th streets. Fitting because Tatarian grew up around the area of Ventura and 10th.</span></p>
+										<p class="bodyContent" style="margin:0px 10px 10px 0px; text-align: left; font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Tatarian, an Armenian American, graduated from Fresno Unified, got his start in journalism at Fresno State, rose through the ranks at United Press International to become its top editor, and returned to his hometown to teach at Fresno State. Now the late Fresno native is being nominated by community members to be the namesake for Fresno Unified’s new alternative education campus at Ventura and 10th streets. Fitting because Tatarian grew up around the area of Ventura and 10th.</span></p>
 									</tr>
 								</tbody>
 							</table>
