added tatarian section, working

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!-- http://go.pardot.com/l/857603/2021-04-19/tvsvg/857603/1618872743VzmYsWJ5/Email_header_GV_Home_loans_600x370px.png -->
 <!-- http://go.pardot.com/l/857603/2021-04-21/v1ht2/857603/1619044260ZwElEslB/Tatarian_EmailHeader_600x150.jpg -->
 <!-- http://go.pardot.com/l/857603/2021-04-21/v1hsz/857603/1619044260BhPzy9ng/Tatarian_EmailSideImage_300x300.jpg -->
+<!-- https://pi.pardot.com/emailTest/read/id/8391 Rendering Tests -->
 
 
 
@@ -494,7 +495,7 @@
 					<!--section end--><!--paragraph Body section start-->
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; text-align: left;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
-						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:16px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>Ventana Hills Bike Race.</b> </span>
+						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:16px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>Ventana Hills Circuit Race.</b> </span>
 						<p style="margin-top: 10px"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is proud to partner with the Central Valley's premier cycling team, <a href="https://www.velokings.com/" target="_blank" style="text-decoration: none;">Velo Kings Racing,</a> to present a Circuit Race at Ventana Hills. This event will take place Saturday, May 8th, 2021. Circuit Race participants will speed through Ventana Hill's majestic oak trees, rolling green hillsides and breathtaking views of the city below. To learn more about the event, or sign up to participate, click the link below.<br></span></p>
 						<br>
 						<br>
@@ -516,8 +517,8 @@
 							</tbody>
 						</table>
 						<!-- Button : END --></center>
-						<br>
-						<br>
+						<!-- <br>
+						<br> -->
 						<!-- Button : END --></div>
 						</td>
 					</tr>
@@ -533,17 +534,18 @@
 						<table cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;">
 							<tbody>
 								<hr>
-								<tr bgcolor="#fff" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+								<P><b>IT'S TIME TO HONOR A LOCAL ARMENIAN ICON</b></P>
+								<!-- <tr bgcolor="#fff" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 									<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;">
 									<table border="0" cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;" width="100%">
 										<tbody>
 											<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-												<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 4px; text-align: center; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 1.8em; font-weight: 600; color: #ffffff;" valign="top" class="">&nbsp;</td>
+												<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 4px; text-align: center; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 1.8em; font-weight: 600; color: #ffffff;" valign="top" class="">&nbsp; </td>
 											</tr>
 										</tbody>
 									</table>
 									</td>
-								</tr>
+								</tr> -->
 								<!-- ROW ONE -->
 								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;"><!--House A left side-->
 									<td class="stack-column-center" width="50%" " >
@@ -561,7 +563,7 @@
 											<tr>
 												<!-- <td class="center-on-narrow" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #555555; padding: 0 10px 10px; text-align: center;"> -->
 													
-													<p style="margin:0px 0px 0px 0px; text-align: left;"> <b>H. Roger Tatarian</b><br><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is excited to support the naming of Fresno Unified's newest Alternative Education School after the late H. Roger Tatarian, a renowned journalist, professor, author, and Fresno native. Please follow the link below to fill out the survey in support of this titan of journalism and education in our Valley.</span></p>
+													<p style="margin:0px 0px 0px 0px; text-align: left;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is excited to support the naming of Fresno Unified's newest Alternative Education School after the late H. Roger Tatarian, a renowned journalist, professor, author, and Fresno native. Please follow the link below to fill out the survey in support of this titan of journalism and education in our Valley.</span></p>
 
 													</td>
 											</tr>
