Tatarion section fixed

--- a/index.html
+++ b/index.html
@@ -526,15 +526,30 @@
 					<!-- Section End, Bike race -->
 
 
-					<!-- Section Start, Tatarion -->
-					<!-- Move-In Ready Homes Section, Start -->
+					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;margin-top:25px!important;">
+						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:0px;">
+						<table border="0" cellpadding="0" cellspacing="0" height="0px" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;" width="100%">
+							<tbody>
+								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+									
+									<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 0px 20px 0px 20px;" valign="top" class="">
+										<hr >
+										<div class="heading-section" style="padding-top: 20px;"><span class="" style="display:inline-block;font-size:16px;text-transform:uppercase;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>It's Time To Honor a Local Armenian Icon </b> </span></div>
 
+									<!-- <p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;text-align: center; font-family: 'Montserrat', Helvetica, Arial,'sans-serif'; font-size: 24px; mso-height-rule: exactly; line-height: 30px;;"><b>It's Time To Honor a Local Armenian Icon </b><br></p> -->
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						</td>
+					</tr>
+					<!-- Section Start, Tatarion -->
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:0px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff; padding:30px 30px 0px 30px">
+						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:0px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 22px; mso-height-rule: exactly; line-height: 26px; color: #252525; margin-top: -10px;margin-bottom: 10px;background-color: #ffffff; padding:10px 30px 0px 30px">
 						<table cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;">
 							<tbody>
-								<hr>
-								<P><b>IT'S TIME TO HONOR A LOCAL ARMENIAN ICON</b></P>
+								<!-- <hr> -->
+								<!-- <P><b>IT'S TIME TO HONOR A LOCAL ARMENIAN ICON</b></P> -->
 								<!-- <tr bgcolor="#fff" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 									<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;">
 									<table border="0" cellpadding="0" cellspacing="0" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;table-layout:auto;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;border-spacing:0 !important;border-collapse:collapse !important;margin:0 auto !important;" width="100%">
