--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- http://go.pardot.com/l/857603/2021-04-19/tvsvg/857603/1618872743VzmYsWJ5/Email_header_GV_Home_loans_600x370px.png -->
 <!-- http://go.pardot.com/l/857603/2021-04-21/v1ht2/857603/1619044260ZwElEslB/Tatarian_EmailHeader_600x150.jpg -->
 <!-- http://go.pardot.com/l/857603/2021-04-21/v1hsz/857603/1619044260BhPzy9ng/Tatarian_EmailSideImage_300x300.jpg -->
-<!-- https://pi.pardot.com/emailTest/read/id/8425 Rendering Tests -->
+<!-- https://pi.pardot.com/emailTest/read/id/8441 Rendering Tests -->
 
 <!-- https://kevi123.github.io/home-owner-email-04-22-2021/ -->
 
@@ -349,7 +349,7 @@
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
 						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform: none; letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>Refinance Your Mortgage Today and Save</b> </span>
-						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loan's experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over forty years. Take advantage of near-historic-low interest rates, to reduce your payment or save thousands off the life of your loan by visiting Granville Home Loans today.
+						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loan's experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over 40 years. Take advantage of near-historic-low interest rates, to reduce your payment or save thousands off the life of your loan by visiting Granville Home Loans today.
 						&nbsp;</p>
 						<!-- Button : BEGIN -->
 
