Jessie Revisions added

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 			<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;" class="">
 			<center style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;width: 100%;"><!-- Visually Hidden Preheader Text : BEGIN -->
-			<div style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">Building with love and passion for over 40 years | Voted #1 Best New Builder in the 2019 Fresno Bee's People's Choice Awards</div>
+			<div style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">Building with love and passion for over 44 years | Voted #1 Best New Builder in the 2019 Fresno Bee's People's Choice Awards</div>
 			<!-- Visually Hidden Preheader Text : END --><!-- Email Header : BEGIN --></center>
 			</td>
 		</tr>
@@ -349,7 +349,7 @@
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
 						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform: none; letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>Refinance Your Mortgage Today and Save</b> </span>
-						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loan's experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over 40 years. Take advantage of near-historic-low interest rates, to reduce your payment or save thousands off the life of your loan by visiting Granville Home Loans today.
+						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loans' experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over 40 years. Take advantage of near-historic-low interest rates, to reduce your payment or save thousands off the life of your loan by visiting Granville Home Loans today.
 						&nbsp;</p>
 						<!-- Button : BEGIN -->
 
@@ -513,8 +513,8 @@
 							</tbody>
 						</table>
 						<!-- Button : END --></center>
-						<!-- <br>
-						<br> -->
+						<!-- <br>-->
+						
 						<!-- Button : END --></div>
 						</td>
 					</tr>
@@ -532,7 +532,6 @@
 										<hr >
 										<table class="heading-section" style="padding-top: 20px;"><span class="" style="display:inline-block;font-size:20px;font-family:'Montserrat'; text-transform:none;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>It's Time To Honor a Local Armenian Icon. </b> </span></table>
 
-									<!-- <p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;text-align: center; font-family: 'Montserrat', Helvetica, Arial,'sans-serif'; font-size: 24px; mso-height-rule: exactly; line-height: 30px;;"><b>It's Time To Honor a Local Armenian Icon </b><br></p> -->
 									</td>
 								</tr>
 							</tbody>
@@ -559,10 +558,7 @@
 									<table border="0" cellpadding="0" cellspacing="0">
 										<tbody>
 											<tr>													
-													<!-- <p style="margin:0px 0px 0px 0px; text-align: left;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is excited to support the naming of Fresno Unified's newest Alternative Education School after the late H. Roger Tatarian, a renowned journalist, professor, author, and Fresno native. Please follow the link below to fill out the survey in support of this titan of journalism and education in our Valley.</span></p> -->
 													<p class="bodyContent" style="margin:0px 0px 10px 0px; text-align: left; font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">Granville Homes is excited to support the naming of Fresno Unified's newest Alternative Education School after the late H. Roger Tatarian, a renowned journalist, professor, author, and Fresno native. Please follow the link below to fill out the survey in support of this titan of journalism and education in our Valley.</span></p>
-
-
 													</td>
 											</tr>
 										</tbody>
@@ -645,8 +641,8 @@
 					<!--Image hero end-->
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td pardot-data="" style="text-size-adjust: 100%; padding: 30px; text-align: left; font-size: 16px; line-height: 1.5em; color: rgb(255, 0, 0); margin-bottom: 10px; font-family: Montserrat, Helvetica, Arial, sans-serif !important;" class="">
-						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform:none;letter-spacing:.5px;color:#074975;position:relative; font-weight: bold; text-align: center !important;">The Lucky Ticket Will Win This Beautiful Home</span>
-						<p style="margin-top: 10px"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">2021 Granville Home of Hope Tickets are available now. Tickets are only $100 for your chance to win this stunning Canvas 9 Granville home located in Granville's latest Canvas on the Bluffs neighborhood at Copper River Ranch. Or grab a two-ticket Lexus Bundle for $200 with the chance to win a 24-month lease on a 2021 Lexus UX 200, presented by Fresno Lexus.<b> Only 2,250 bundles and 8,000 total tickets will be available.</b><br>
+						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform:none;letter-spacing:.5px;color:#074975;position:relative; font-weight: bold; text-align: center !important;">One Lucky Ticket Will Win This Beautiful Home</span>
+						<p style="margin-top: 10px"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">2021 Granville Home of Hope Tickets are available now. Tickets are only $100 for your chance to win this stunning Canvas 9 Granville home, located in Granville's latest Canvas on the Bluffs neighborhood at Copper River Ranch. Or grab a two-ticket Lexus Bundle for $200, which gives you a free entry for a chance to win a 24-month lease on a 2021 Lexus UX 200, presented by Fresno Lexus.<b> Only 2,250 bundles and 8,000 total tickets will be available.</b><br>
 							<br> 100% of proceeds support 11 local nonprofits who provide food, shelter, healthcare, and education to the underserved in our community. Tickets have sold out 4 years in a row, so make sure to get yours today.</span></p>
 						<br>
 						<!-- Button : BEGIN -->
